force-app/main/default/objects/BLS_Med_Partcptn__c/BLS_Med_Partcptn__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>BLS Datapoint: Medical participation</description>
    <label>BLS Med Partcptn</label>
</CustomObject>