force-app/main/default/objects/BLS_Med_Partcptn__c/fields/datatype_code__c.field-meta.xml
<CustomField>
    <fullName>datatype_code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>datatype code</label>
    <length>2</length>
    <type>Text</type>
</CustomField>