force-app/main/default/objects/BLS_Med_Partcptn__c/fields/industry_code__c.field-meta.xml
<CustomField>
    <fullName>industry_code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>industry code</label>
    <length>4</length>
    <type>Text</type>
</CustomField>