force-app/main/default/objects/BLS_Med_Partcptn__c/fields/ocupational_code__c.field-meta.xml
<CustomField>
    <fullName>ocupational_code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ocupational code</label>
    <length>6</length>
    <type>Text</type>
</CustomField>