force-app/main/default/objects/BLS_Med_Partcptn__c/fields/ownership_code__c.field-meta.xml
<CustomField>
    <fullName>ownership_code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ownership code</label>
    <length>1</length>
    <type>Text</type>
</CustomField>