force-app/main/default/objects/BLS_Med_Partcptn__c/fields/provision_code__c.field-meta.xml
<CustomField>
    <fullName>provision_code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>provision code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>