force-app/main/default/objects/BLS_Med_Partcptn__c/fields/seasonal__c.field-meta.xml
<CustomField>
    <fullName>seasonal__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>seasonal</label>
    <length>1</length>
    <type>Text</type>
</CustomField>