force-app/main/default/objects/BLS_Med_Partcptn__c/fields/subcell_code__c.field-meta.xml
<CustomField>
    <fullName>subcell_code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>subcell code</label>
    <length>2</length>
    <type>Text</type>
</CustomField>